<?xml version="1.0"?>
<package format="3">
  <name>naoqi_bridge_msgs</name>
  <version>0.0.8</version>
  <description>The naoqi_bridge_msgs package provides custom messages for running Aldebaran's robot such as NAO and Pepper. See the packages nao_robot and pepper_robot for details.</description>

  <author>Karsten Knese</author>
  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</build_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <!--<exec_depend>genmsg</exec_depend>!-->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <replace>naoqi_msgs</replace>
  <conflict>naoqi_msgs</conflict>
  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="rosbridge_mapping_rules.yaml"/>
  </export>
</package>
